# gptp-fork

./: .gitignore  CLOCK_QUALITY_IMPLEMENTATION.md  CMakeLists.txt  I219_Integration_Complete.md  IMMEDIATE_ACTIONS_PROGRESS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  MESSAGE_SERIALIZATION_IMPLEMENTATION.md  MESSAGE_SERIALIZATION_RESOLVED.md  MODERNIZATION.md  PATH_DELAY_ANALYSIS.md  PATH_DELAY_IMPLEMENTATION.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_3_COMPLETE_SUMMARY.md  PHASE_4_PLAN_BMCA_SYNCHRONIZATION.md  PHASE_5_COMPLETE.md  PHASE_5_PLAN_NETWORK_INTEGRATION.md  README.md  SEQUENCE_NUMBER_IMPLEMENTATION.md  UpgradeLog.htm  gptp.conf  gptp.sln  gptp.vcxproj  launch.json  tasks.json  temp.yml
.github/workflows/: ci.yml  sync.yml
docs/: I350_E810_INTEGRATION_SUMMARY.md  INTEL_ADAPTER_DETECTION_GUIDE.md  INTEL_I350_E810_ANALYSIS.md
include/: bmca.hpp  clock_quality_manager.hpp  clock_servo.hpp  gptp_clock.hpp  gptp_message_parser.hpp  gptp_port.hpp  gptp_port_manager.hpp  gptp_protocol.hpp  gptp_socket.hpp  gptp_state_machines.hpp  gptp_types.hpp  intel_adapter_config.hpp  message_serializer.hpp  path_delay_calculator.hpp  sequence_number_manager.hpp  simple_path_delay.hpp
linux/: Makefile
scripts/: build-windows.ps1  clone_issues.py
src/: main.cpp  simple_socket_test.cpp  timestamping.cpp  timestamping.h
src/core/: bmca.cpp  clock_quality_manager.cpp  clock_servo.cpp  clock_servo_implementation.cpp  gptp_clock.cpp  gptp_port_manager.cpp  gptp_state_machines.cpp  path_delay_calculator.cpp  sequence_number_manager.cpp  simple_path_delay.cpp  timestamp_provider.cpp  timestamp_provider.hpp
src/networking/: linux_socket.cpp  linux_socket.hpp  message_processor.cpp  packet_builder.cpp  socket_manager.cpp  windows_socket.cpp  windows_socket.hpp
src/platform/: hardware_timestamping.cpp  intel_adapter_manager.hpp  linux_adapter_detector.cpp  linux_adapter_detector.hpp  linux_timestamp_provider.cpp  linux_timestamp_provider.hpp  rme_adapter_config.hpp  rme_adapter_detector.cpp  rme_adapter_detector.hpp  windows_adapter_detector.cpp  windows_adapter_detector.hpp  windows_timestamp_provider.cpp  windows_timestamp_provider.hpp  windows_timestamp_provider_fixed.cpp
src/utils/: configuration.cpp  configuration.hpp  logger.hpp
tests/: ALL_BUILD.vcxproj  CMakeLists.txt  CMakeLists_clean.txt  CMakeLists_fixed.txt  Project.sln  ZERO_CHECK.vcxproj  phase5_network_integration_demo.cpp  simple_test.cpp  simple_test.vcxproj  standalone_state_test.cpp  test_bmca.cpp  test_clock_quality_manager.cpp  test_clock_servo.cpp  test_immediate_actions.cpp  test_integration.cpp  test_message_serialization.cpp  test_network_integration.cpp  test_networking.cpp  test_networking.vcxproj  test_networking_simple.cpp  test_networking_simple.vcxproj  test_path_delay_calculator.cpp  test_port_manager.cpp  test_sequence_number_manager.cpp  test_state_machines.cpp  test_state_machines.vcxproj  test_timestamp_provider.cpp
